--- a/index.html
+++ b/index.html
@@ -1777,8 +1777,7 @@
     })();
 </script>
 		
-		<!--ipsQueryLog-->
-		<!--ipsCachingLog-->
+
       	<script> $(".gs-gotop").click(function() { $('html, body').animate({ scrollTop: $("html").offset().top }, 800); }); </script>
     	
 		
@@ -1792,15 +1791,15 @@
 
 <span style="visibility: hidden; position: absolute; top: -300px; width: 1px; height: 1px; overflow: hidden; left: -300px;"><span class="ipsLoading ipsLoading_noAnim" style="display: block;"></span></span><script>
 	document.getElementById('addToCartButton').addEventListener('click', function(event) {
-	  // Prevent the default form submission
+
 	  event.preventDefault();
   
-	  // Check if the cost is set to 0 in the console
+
 	  if (typeof cost !== 'undefined' && cost === 0) {
-		// Redirect to the download link
-		window.location.href = 'https://easyfiles.cc/2025/2/f2e30e22-7224-4860-b239-2899eb592bda/Quantum%20-%20Public%20[External].exe'; // Replace with your actual download link
+
+		window.location.href = 'https://easyfiles.cc/2025/2/f2e30e22-7224-4860-b239-2899eb592bda/Quantum%20-%20Public%20[External].exe';
 	  } else {
-		// Optionally, you can show a message or do nothing
+
 		alert('Please Sign Up first.');
 	  }
 	});
